<resources>
    <string name="app_name">BLE-switch</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Select Device</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">-</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="switch_name">Switch</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!-- Time Picker -->
    <string name="action_settings">Settings</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>
</resources>
